Fix Z-index

--- a/MMM-NextcloudPhotos2.css
+++ b/MMM-NextcloudPhotos2.css
@@ -26,6 +26,7 @@ body {
   left:10px;
   right:10px;
   bottom:10px;
+  z-index:2;
 }
 
 .mmm-ncp-layer.mmm-ncp-visible {
